[feat] studyType 추가로 스터디 생성에 기능 추가